# CMS

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: publish-container.yml
blog/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpagegalleryimage.py  0005_blogpage_authors.py  0007_blogtagindexpage.py  0009_navbarlink_sort_order.py  0010_remove_navbarlink_sort_order.py
blog/templates/blog/parts/: blog_post_image_gallery.html  blog_post_thumb.html  blog_posts_grid.html  navbar_links.html
blog/templatetags/: blog_tags.py
mysite/settings/: base.py  dev.py
mysite/static/css/: mysite.css
mysite/static/js/: mysite.js
mysite/templates/: base.html
mysite/templates/parts/: navbar.html
src/: gunicorn.conf.py  manage.py
src/biolink/: apps.py  models.py
src/biolink/migrations/: 0001_initial.py
src/biolink/templates/biolink/: base.html  bio_link_account.html  bio_link_account_partial.html
src/blog/: models.py  wagtail_hooks.py
src/blog/migrations/: 0004_author.py  0006_blogpagetag_blogpage_tags.py  0008_navbarlink_alter_author_options_and_more.py  0011_alter_blogindexpage_options_alter_blogpage_options_and_more.py  0012_bloghomepage_bloglistpage_and_more.py  0013_navbarlink_page_alter_navbarlink_link.py
src/blog/static/css/: mysite.css  (+1 more)
src/blog/templates/: 404.html
src/blog/templatetags/: blog_tags.py
src/core/: environ.py  settings.py
src/core/code_block/: apps.py  wagtail_hooks.py
src/core/settings/: base.py  dev.py
(+29 files in other folders)
