[project]
name = "cms"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2==2.9.10",
    "Django>=5.2,<5.3",
    "wagtail>=7.0,<7.1",
    "django-storages[s3]==1.14.6",
    "django-environ==0.12.0",
    "gunicorn>=23.0.0",
    "django-htmx>=1.23.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"
exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = ['F', 'I', 'DJ', 'N']
